--- a/webroot/css/default/style.css
+++ b/webroot/css/default/style.css
@@ -3835,8 +3835,8 @@ a.text-green:focus {
 
 .page-full {padding-top: 120px;}
 .page-box {padding-top: 60px;padding-bottom: 25px !important;}
-.page-light {background-image: linear-gradient(120deg, #ef8157 0%, #f36717 100%);}
-.page-dark {background-image: linear-gradient(120deg, #f36717 0%, #ef8157 100%);}
+.page-light {background-color: #dcdcdc17;}
+.page-dark {background-color: #f5f5f5;}
 
 .table-plans {color: #66615b !important;}
 .table-plans .plan-box {margin: 15px 0;}
