--- a/webroot/css/default/default.css
+++ b/webroot/css/default/default.css
@@ -980,3 +980,9 @@
     margin-left: 0 !important;
     margin-bottom: 0 !important;
 }
+.noPadding {
+    padding-top: 0 !important;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    padding-bottom: 0 !important;
+}
